tests/snapshots/yaml_suite_snapshots__yaml_suite_BD7L_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid mapping after sequence
  from: "@perlpunk"
  tags: error mapping sequence
  fail: true
  yaml: "- item1\n- item2\ninvalid: x\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :item1\n   =VAL :item2\n"
