tests/snapshots/yaml_suite_snapshots__yaml_suite_BD7L_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid mapping after sequence
  tags: error mapping sequence
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :item1\n   =VAL :item2\n"
  yaml: "- item1\n- item2\ninvalid: x\n"
