tests/snapshots/yaml_suite_snapshots__yaml_suite_BEC7_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 6.14. “YAML” directive
  from: "http://www.yaml.org/spec/1.2/spec.html#id2781929"
  tags: spec directive
  yaml: "%YAML 1.3 # Attempt parsing\n          # with a warning\n---\n\"foo\"\n"
  tree: "+STR\n +DOC ---\n  =VAL \"foo\n -DOC\n-STR\n"
  json: "\"foo\"\n"
  dump: "--- \"foo\"\n"
