tests/snapshots/yaml_suite_snapshots__yaml_suite_BEC7_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- \"foo\"\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2781929"
  json: "\"foo\"\n"
  name: Spec Example 6.14. “YAML” directive
  tags: spec directive
  tree: "+STR\n +DOC ---\n  =VAL \"foo\n -DOC\n-STR\n"
  yaml: "%YAML 1.3 # Attempt parsing\n          # with a warning\n---\n\"foo\"\n"
