tests/snapshots/yaml_suite_snapshots__yaml_suite_BF9H_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Trailing comment in multiline plain scalar
  from: "@perlpunk"
  tags: comment error scalar
  fail: true
  yaml: "---\nplain: a\n       b # end of scalar\n       c\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :plain\n   =VAL :a b\n"
