tests/snapshots/yaml_suite_snapshots__yaml_suite_BF9H_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Trailing comment in multiline plain scalar
  tags: comment error scalar
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :plain\n   =VAL :a b\n"
  yaml: "---\nplain: a\n       b # end of scalar\n       c\n"
